--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Ignorar dependências
+node_modules/
+
+# Ignorar arquivos e pastas do Cypress
+cypress/screenshots/
+cypress/videos/
+
